modify the paths and the tile in the html file

--- a/index.html
+++ b/index.html
@@ -1,167 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <!--css file-->
-        <link rel="stylesheet" href="file2css.css">
+    <link rel="stylesheet" href="main.css">
     <!--font icons link-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>HTML-CSS-Template1</title>
 </head>
+
 <body>
-   <div class="parent">
-    <div class="container">
-        <div class="header">
-            <div class="logo">
-                <i class="fa-brands fa-wordpress"></i>
+    <div class="parent">
+        <div class="container">
+            <div class="header">
+                <div class="logo">
+                    <i class="fa-brands fa-wordpress"></i>
+                </div>
+                <div class="links">
+                    <input type="checkbox" id="check">
+                    <div class="icon">
+                        <label for="check">
+                            <i class="fa-solid fa-bars-staggered"></i>
+                        </label>
+                    </div>
+                    <ul>
+                        <li><a href="#service">services</a></li>
+                        <li><a href="#portfolio">portfolio</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#contanct">contanct</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="links">
-            <input type="checkbox" id="check">
-            <div class="icon">
-                <label for="check">
-                <i class="fa-solid fa-bars-staggered"></i>
-                </label>
+            <div class="landing">
+                <div class="text">
+                    <h1>beloued bouaabdellah</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, quisquam?</p>
+                </div>
             </div>
-            <ul>
-                <li><a href="#service">services</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#contanct">contanct</a></li>
-            </ul>
+            <div class="features">
+                <div class="content">
+                    <div>
+                        <i class="fa-solid fa-wand-magic-sparkles"></i>
+                        <h3>tell as your idea</h2>
+                            <p>Lorem ipsum dolor sit amet. Lorem ipsum .</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-gem"></i>
+                        <h3>we will do all the work</h3>
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum </p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-globe"></i>
+                        <h3>your product is worldwide</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing </p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="landing">
-            <div class="text">
-                <h1>beloued bouaabdellah</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, quisquam?</p>
-            </div>
-        </div>
-        <div class="features">
-            <div class="content">
-           <div>
-            <i class="fa-solid fa-wand-magic-sparkles"></i>
-            <h3>tell as your idea</h2>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum .</p>
-           </div>
-           <div>
-            <i class="fa-solid fa-gem"></i>
-            <h3>we will do all the work</h3>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum </p>
-           </div> 
-           <div>
-            <i class="fa-solid fa-globe"></i>
-            <h3>your product is worldwide</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing </p>
-           </div>  
-        </div>
-        </div>
-        <div class="services">
-            <div class="content1" id="service">
-                <h1>services</h1>
-                <p>don 't be busy , be productive</p>
-                <div class="grid">
-                    <div class="col">
-                        <div class="flex">
-                        <i class="fa-solid fa-palette"></i>
-                       <div>
-                       <h3>graphic design</h3>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p> 
-                       </div>
-                       </div>
-                       <div class="flex">
-                        <i class="fa-brands fa-sketch"></i>
-                        <div>
-                        <h3>web design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p> 
+            <div class="services">
+                <div class="content1" id="service">
+                    <h1>services</h1>
+                    <p>don 't be busy , be productive</p>
+                    <div class="grid">
+                        <div class="col">
+                            <div class="flex">
+                                <i class="fa-solid fa-palette"></i>
+                                <div>
+                                    <h3>graphic design</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <i class="fa-brands fa-sketch"></i>
+                                <div>
+                                    <h3>web design</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="flex">
+                                <i class="fa-solid fa-vector-square"></i>
+                                <div>
+                                    <h3>UI / UX</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <i class="fa-solid fa-pen-ruler"></i>
+                                <div>
+                                    <h3>web development</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="mountains-5260303_1920.jpg" alt="mountains">
                         </div>
                     </div>
-                    </div>
-                    <div class="col">
-                        <div class="flex">
-                        <i class="fa-solid fa-vector-square"></i>
-                        <div>
-                        <h3>UI / UX</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p> 
+                </div>
+                <div class="content1" id="portfolio">
+                    <h1>portfolio</h1>
+                    <p>if you do it right , it will be fast forever</p>
+                    <div class="grid">
+                        <div class="col">
+                            <img src="digital-marketing-1433427_640.jpg" alt="digital marketing">
+                            <div>
+                                <h3>project management</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
+                            </div>
                         </div>
+                        <div class="col">
+                            <img src="typing-849806_640.jpg" alt="digital marketing">
+                            <div>
+                                <h3>project management</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
+                            </div>
                         </div>
-                        <div class="flex">
-                        <i class="fa-solid fa-pen-ruler"></i>
-                        <div>
-                        <h3>web development</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, eaque!</p>
-                        </div> 
+                        <div class="col">
+                            <img src="digital-marketing-5816304_640.jpg" alt="digital marketing">
+                            <div>
+                                <h3>project management</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="image">
-                        <img src="mountains-5260303_1920.jpg" alt="mountains">
-                    </div>
+                </div>
+                <div class="about" id="about">
+                    <h1>about</h1>
+                    <p>less is more work</p>
+                    <div class="about-content">
+                        <div class="image">
+                            <img src="water-8100724_1920.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <p>Lorem ipsum dolor sit nesciunt sed eligendi dicta ut illum laboriosam praesentium. Odit
+                                tenetur fugit aspernatur! Similique.</p>
+                            <hr>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor nobis distinctio impedit.
+                                Voluptates beatae, nisi cumque quia velit laudantium excepturi quaerat quis fugit error
+                                temporibus asperiores harum. Ratione, officiis eum?</p>
+                        </div>
                     </div>
                 </div>
-            <div class="content1" id="portfolio">
-                <h1>portfolio</h1>
-                <p>if you do it right , it will be fast forever</p>
-                <div class="grid">
-                    <div class="col">
-                        <img src="digital-marketing-1433427_640.jpg" alt="digital marketing">
-                        <div>
-                        <h3>project management</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
+                <div class="contact" id="contanct">
+                    <h1>contact</h1>
+                    <p>we are born to creat</p>
+                    <div class="mail">
+                        <h2>feel free to drop us a line at :</h2>
+                        <a href="mailto:bouaabd10@gmail.com?subject=contact">bouaabd10@gmail.com</a>
                     </div>
+                    <div class="icon">
+                        <p>find us on social network</p>
+                        <a href="#"><i class="fa-brands fa-google"></i></a>
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     </div>
-                    <div class="col">
-                        <img src="typing-849806_640.jpg" alt="digital marketing">
-                        <div>
-                        <h3>project management</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
-                    </div>
-                    </div>
-                    <div class="col">
-                        <img src="digital-marketing-5816304_640.jpg" alt="digital marketing">
-                        <div>
-                        <h3>project management</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, tempore.</p>
-                    </div>
-                    </div>
-                </div>
-            </div>  
-            <div class="about" id="about">
-                <h1>about</h1>
-                <p>less is more work</p>
-                <div class="about-content">
-                    <div class="image">
-                      <img src="water-8100724_1920.jpg" alt="">  
-                    </div>
-                    <div class="text">
-                        <p>Lorem ipsum dolor sit nesciunt sed eligendi dicta ut illum laboriosam praesentium. Odit tenetur fugit aspernatur! Similique.</p>
-                        <hr>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor nobis distinctio impedit. Voluptates beatae, nisi cumque quia velit laudantium excepturi quaerat quis fugit error temporibus asperiores harum. Ratione, officiis eum?</p>
-                    </div>
-                </div>
-            </div>         
-            <div class="contact" id="contanct">
-                <h1>contact</h1>
-                <p>we are born to creat</p>
-                <div class="mail">
-                    <h2>feel free to drop us a line at :</h2>
-                    <a href="mailto:bouaabd10@gmail.com?subject=contact">bouaabd10@gmail.com</a>
-                </div>
-                <div class="icon">
-                    <p>find us on social network</p>
-                    <a href="#"><i class="fa-brands fa-google"></i></a>
-                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            &copy; 2024 <span>-Beloued-</span><span> All right reserved</span>
         </div>
     </div>
-   <div class="footer">
-    &copy; 2024 <span>-Beloued-</span><span>  All right reserved</span>
-   </div>
-</div>
 </body>
+
 </html>
